--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Minha página</title>
+  <title>Sessão Ajuda</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script>
     document.addEventListener('DOMContentLoaded', function() {
